<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CINE FLASH</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="history_fragment_label">History Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="text_label_1">History</string>
    <string name="text_label_2">Home</string>
    <string name="text_label_3">Movies</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_fragment_label">Movies Fragment</string>

    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="fab_content_desc">scan</string>

    <string name="imdb">IMDB Rating</string>
    <string name="metacritic">Metacritic Rating</string>
    <string name="tomato">Tomato Rating</string>

    <string name="note">6,8/10</string>
    <string name="voteNumber">335k</string>

    <string name="filmTitle">Film Title</string>
    <string name="dateTime">DD MM YYYY · HHhMM</string>
    <string name="noteDesc">Notes</string>
    <string name="title">filmTitle</string>
    <string name="secondary_text">8,3/10</string>
    <string name="content_description_media">filmPoster</string>
    <string name="label">Search</string>

    <string name="history">History</string>
    <string name="news">NEWS</string>
    <string name="reviews">REVIEWS</string>
    <string name="casting">CASTING</string>
    <string name="seances">SEANCES</string>
    <string name="nameActor">firstName lastName</string>
    <string name="role">role</string>
    <string name="supporting_text">Despite being a huge comic book nerd I was not familiar with the Guardians before the first movie came out. I did some googling and upon learning about this sci-fi superhero team consisting of a talking raccoon and tree man I was hardly impressed.I finally got round to watching the first film and was blown away. It had a remarkable charm that even the other Marvel titles didn\'t have. It was filled with great humour, memorable moments and fit into the Marvel Universe long running story perfectly.Because of this I pumped by expectations up high for the sequel to a degree where it was almost guaranteed to fail yet somehow, someway it didn\'t.Not only did it meet my expectations but it exceeded them, GotG2 is amazing.Full of the same five star humour, being a visual treat and once again with an excellent soundtrack the film gripped me from the outset and delivered that charm all over again.This time including several industry veterans including Kurt Russell (Who has been on great form since his return) and Sylvester Stallone they fit in well and don\'t detract from the franchise as I feared they might.With cameo appearances along the way from the likes of Farscape (1999) lead Ben Browder to industry legend Seth Green as Howard the Duck this is a fun rollercoaster ride than left me positively gagging for more.This is one of those films I feel like I could rant about (In a positive way) for a while and so I\'m going to resist the urge and merely say that Guardians 2 is a contender for the best Marvel movie, contested only by the first Avengers film.Masterpiece.The Good:Cast are great againCharm returnsExcellent nostalgic soundtrackLooks amazingThe Bad:Only one movie with Baby Groot? Noooo!They seem to have dropped Drax\'s taking everything literal jokes awayMichael Rosenbaum was wastedThings I Learnt From This Movie:Batista should have skipped over wrestling and just been an actor</string>
    <string name="reviewTitle">reviewTitle</string>
    <string name="actors">Actors</string>
    <string name="filmCrew">Film Crew</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="reserve">RESERVE NOW</string>
    <string name="nextShow">Next nearest seances</string>
    <string name="cinema">Cinema Pathe Le Mans</string>
    <string name="hour">8:15pm</string>
    <string name="version">OV</string>
    <string name="nearest">Nearest</string>

    <string name="date_1">WEN. 24 NOV.</string>
    <string name="date_2">THU. 25 NOV.</string>
    <string name="date_3">FRI. 26 NOV.</string>
    <string name="date_4">SAT. 27 NOV.</string>
    <string name="date_5">SUN. 28 NOV.</string>
    <string name="nextShows">Next Seances</string>
    <string name="incoming">Incoming</string>


</resources>