<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/date1"
        android:enabled="true"
        android:title="@string/date_1"
        android:icon="@drawable/outline_event_24"/>
    <item
        android:id="@+id/date2"
        android:enabled="true"
        android:title="@string/date_2"
        android:icon="@drawable/outline_event_24"/>
    <item
        android:id="@+id/date3"
        android:enabled="true"
        android:title="@string/date_3"
        android:icon="@drawable/outline_event_24"/>
    <item
        android:id="@+id/date4"
        android:enabled="true"
        android:title="@string/date_4"
        android:icon="@drawable/outline_event_24"/>
    <item
        android:id="@+id/date5"
        android:enabled="true"
        android:title="@string/date_5"
        android:icon="@drawable/outline_event_24"/>
</menu>