<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HistoryFragment"
        android:name="com.example.test.fragments.HistoryFragment"
        android:label="@string/history_fragment_label"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.test.fragments.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/MoviesFragment"
        android:name="com.example.test.fragments.MoviesFragment"
        android:label="@string/movies_fragment_label"
        tools:layout="@layout/fragment_movies" />
</navigation>