<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="false"
            android:textAlignment="center"
            app:navigationIcon="@drawable/outline_arrow_back_24"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filmTitle"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateTime"
                android:textAlignment="center" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:autoPlay="false"
                app:videoId="wUn05hdkhjM"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ratings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/idbm_rating"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/imdb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/imdb"
                        android:textAlignment="center" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2"
                            android:contentDescription="@string/noteDesc"
                            android:src="@drawable/outline_star_24"
                            android:visibility="visible" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.8"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/noteIMDB"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/note"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/numberVoteIMDB"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/voteNumber"
                                android:textAlignment="center" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/metacritic_rating"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/metacritic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/metacritic"
                        android:textAlignment="center" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2"
                            android:contentDescription="@string/noteDesc"
                            android:src="@drawable/outline_movie_filter_24"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/noteMetacritic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.8"
                            android:text="@string/note"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tomato_rating"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tomato"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tomato"
                        android:textAlignment="center" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2"
                            android:contentDescription="@string/noteDesc"
                            android:src="@drawable/outline_thumb_up_alt_24"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/noteTomato"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.8"
                            android:text="@string/note"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/movie_navigation_menu"
                android:layout_gravity="bottom|center"
                app:labelVisibilityMode="labeled"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/nav_host_fragment_content_movie"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:defaultNavHost="false"
                app:navGraph="@navigation/nav_graph_movie"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>